--- a/symfony/src/AppBundle/Resources/config/routing/unidad-correspondencia.yml
+++ b/symfony/src/AppBundle/Resources/config/routing/unidad-correspondencia.yml
@@ -5,3 +5,7 @@ unidadCorrespondencia_entradaCorrespondencia:
     path: /entrada-correspondencia
     defaults: { _controller: "AppBundle:UnidadCorrespondencia:entradaCorrespondencia" }
     methods: POST
+unidadCorrespondencia_salidaCorrespondencia:
+    path: /salida-correspondencia
+    defaults: { _controller: "AppBundle:UnidadCorrespondencia:salidaCorrespondencia" }
+    methods: POST
