--- a/symfony/src/BackendBundle/Resources/config/doctrine/TblFuncionarios.orm.yml
+++ b/symfony/src/BackendBundle/Resources/config/doctrine/TblFuncionarios.orm.yml
@@ -5,15 +5,15 @@ BackendBundle\Entity\TblFuncionarios:
         fki_user_funci:
             columns:
                 - id_usuario
-        fki_estado_func:
+        fki_tipo_func:
+            columns:
+                - id_tipo_funcionario
+        fki_estados_id:
             columns:
                 - id_estado
         fki_depto_func:
             columns:
                 - id_depto_funcional
-        fki_tipo_func:
-            columns:
-                - id_tipo_funcionario
     id:
         idFuncionario:
             type: integer
@@ -90,6 +90,16 @@ BackendBundle\Entity\TblFuncionarios:
                 id_depto_funcional:
                     referencedColumnName: id_depto_funcional
             orphanRemoval: false
+        idEstado:
+            targetEntity: TblEstados
+            cascade: {  }
+            fetch: LAZY
+            mappedBy: null
+            inversedBy: null
+            joinColumns:
+                id_estado:
+                    referencedColumnName: id_estado
+            orphanRemoval: false
         idTipoFuncionario:
             targetEntity: TblTiposFuncionarios
             cascade: {  }
@@ -109,15 +119,5 @@ BackendBundle\Entity\TblFuncionarios:
             joinColumns:
                 id_usuario:
                     referencedColumnName: id_usuario
-            orphanRemoval: false
-        idEstado:
-            targetEntity: TblEstados
-            cascade: {  }
-            fetch: LAZY
-            mappedBy: null
-            inversedBy: null
-            joinColumns:
-                id_estado:
-                    referencedColumnName: id_estado
             orphanRemoval: false
     lifecycleCallbacks: {  }
