--- a/Angular_SICDOC/sicdoc/package.json
+++ b/Angular_SICDOC/sicdoc/package.json
@@ -13,21 +13,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.4.4",
-    "@angular/cdk": "^2.0.0-beta.11",
+    "@angular/cdk": "^5.2.0",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
     "@angular/compiler-cli": "^4.4.4",
     "@angular/core": "^4.2.4",
     "@angular/forms": "^4.2.4",
     "@angular/http": "^4.2.4",
-    "@angular/material": "^2.0.0-beta.11",
+    "@angular/material": "^5.2.0",
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "@types/jspdf": "^1.1.31",
     "angular-material": "^1.1.5",
     "angular2-datatable": "^0.6.0",
-    "angular2-image-upload": "^1.0.0-rc.0",
+    "angular2-multiselect-dropdown": "3.2.1",
     "angular2-notifications": "^0.9.7",
     "chart.js": "^2.7.2",
     "core-js": "^2.4.1",
@@ -62,6 +62,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
-    "typescript": "~2.5.3"
+    "typescript": "^2.3.4"
   }
 }
